--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
